src/objects/Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>DT__c</fullName>
        <label>Data Transformation</label>
        <referenceTo>Data_Transformation__mdt</referenceTo>
        <relationshipLabel>Field Mapping</relationshipLabel>
        <relationshipName>Field_Mapping</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Datatype__c</fullName>
        <label>SFDC Datatype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                    <default>true</default>
                    <label>Date</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Streaming Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <label>Field Api Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Json_Tag__c</fullName>
        <label>Json Tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Api__c</fullName>
        <label>SObject Api</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemInfo__c</fullName>
        <label>SourceSystemInfo</label>
        <referenceTo>SourceSystemInfo__mdt</referenceTo>
        <relationshipLabel>Field Mapping</relationshipLabel>
        <relationshipName>Field_Mapping</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                    <default>true</default>
                    <label>Inbound</label>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Field Mapping</label>
    <pluralLabel>Field Mapping</pluralLabel>
</CustomObject>